# payslip-br

./: .gitignore  README.md  setup.cfg
examples/: example.py
src/: __init__.py  payslip.py
tests/: tests.py
