[metadata]
name = payslip-br-gambardellawill
version = 0.0.1
author = William Gambardella
author_email = williamcampo@gmail.com
description = A Python module for decoding and working with Brazilian payslips, more commonly known as boletos.
long_description = file: README.md
long_description_content = text/markdown
url = https://github.com/gambardellawill/payslip
project_urls =
    Bug tracker = https://github.com/gambardellawill/payslip/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src